--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ body {
 }
 
 .list-item-height {
-    height: 90vh;
+    height: 95vh;
     padding-top: 80px;
 }
 
@@ -27,9 +27,28 @@ body {
     background-color: #83868a;
 }
 
-a {
-    color: #009fff;
+a.nav-link {
+    /*color: #009fff;*/
+    color: #fff;
     text-decoration: none;
     background-color: #475665;
     -webkit-text-decoration-skip: objects;
+}
+
+a.nav-link:hover {
+    color: #009fff;
+    /*color: #83868a;*/
+    text-decoration: none;
+    /*
+    border-color: #747378;
+    border-style: solid;
+    */
+
+    background-color: #475665;
+    /*background-color: #747378;*/
+    -webkit-text-decoration-skip: objects;
+}
+
+footer {
+
 }
