--- a/css/main.css
+++ b/css/main.css
@@ -52,3 +52,13 @@ a.nav-link:hover {
 footer {
 
 }
+
+.box {
+    height: 1000px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.box>* {
+    flex: 1 1 300px;
+}
